<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.idont.checktime.ChartEmployeeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_time_700"
        android:id="@+id/textView0700"
        android:layout_marginBottom="46dp"
        android:layout_alignBottom="@+id/horizontalScrollView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_time_1030"
        android:id="@+id/textView1030"
        android:layout_alignTop="@+id/horizontalScrollView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_basetime"
        android:id="@+id/textView0830"
        android:layout_above="@+id/view0830"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#e2e2e2"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:id="@+id/view0830" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView1030">
        <view
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            class="im.dacer.androidcharts.BarView"
            android:id="@+id/bar_view" />
    </HorizontalScrollView>

</RelativeLayout>
