<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context="com.example.idont.checktime.EditUserProfileActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar_edit_user"
                layout="@layout/toolbar_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:visibility="visible"
                        android:layout_centerVertical="true"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/profilenew"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#FF000000"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

                <Button
                    android:id="@+id/buttonSelectPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_select_photo"
                    android:textSize="10sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_editFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_firstname"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_editLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_lastname"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_editPhonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editPhonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phonenumber"
                        android:maxLength="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/txt_birthday"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/buttonSelectDate"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/txt_select_date"
                        android:textSize="10sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
